<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!-- TODO: change to icon -->
    <item android:id="@+id/action_new_workout" android:title="@string/action_new_workout"
        app:showAsAction="ifRoom"/>

    <!-- overflow -->
    <item android:id="@+id/action_new_weight" android:title="@string/action_new_weight"
        app:showAsAction="never"/>

    <item android:id="@+id/action_reminder" android:title="@string/action_reminder"
        android:orderInCategory="99" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
