<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.samson.workout_log.new_entry_activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/muscle_group"
        android:id="@+id/text_muscle_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_muscle_group"
        android:layout_toRightOf="@id/text_muscle_group"
        android:layout_toEndOf="@id/text_muscle_group" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/exercise"
        android:id="@+id/text_exercise"
        android:layout_below="@id/text_muscle_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_exercise"
        android:layout_below="@id/spinner_muscle_group"
        android:layout_toRightOf="@+id/text_exercise" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sets"
        android:id="@+id/text_sets"
        android:layout_below="@id/text_exercise"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_sets"
        android:layout_toRightOf="@id/editText_sets"
        android:layout_alignBaseline="@id/text_sets"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reps"
        android:id="@+id/text_reps"
        android:layout_below="@id/text_sets" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/editText_reps"
        android:ems="10"
        android:layout_toRightOf="@id/text_reps"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/text_weight_lifted"
        android:layout_below="@id/text_reps" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_weight_lifted"
        android:layout_toRightOf="@id/text_weight_lifted"/>

    <Button
        android:id="@+id/save_button"
        android:text="@string/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_weight_lifted"
        android:layout_toLeftOf="@+id/discard_button"
        android:layout_toStartOf="@+id/discard_button"
        android:layout_marginRight="38dp"
        android:layout_marginEnd="38dp" />

    <Button
        android:id="@+id/discard_button"
        android:text="@string/button_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_alignTop="@+id/save_button"
        android:layout_alignRight="@+id/spinner_exercise"
        android:layout_alignEnd="@+id/spinner_exercise"
        android:layout_marginRight="67dp"
        android:layout_marginEnd="67dp" />
</RelativeLayout>
